# attendance_tracker_prototype_flutter

./: .gitignore  README.md  _headers  docs_requirements.txt  index.html  mkdocs.yml  pubspec.yaml
.github/workflows/: build-web.yaml  build.yaml
.zed/: debug.json
0.0.1+1/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
0.0.1+2/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
0.0.1+2/assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
0.0.1+3/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
0.0.1+3/launcher/: generate.py
1.0.0+1/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js
1.0.0+1/assets/: AssetManifest.bin.json  NOTICES
1.0.0+1/launcher/: generate.py  index.html
android/: gradle.properties
android/app/: build.gradle.kts
app/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
app/assets/: NOTICES  (+1 more)
devel/: 404.html
docs/: index.md  rfid.md
latest/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js
lib/: android_lockdown.dart  backend.dart  dev_opts_page.dart  image_util.dart  keyboard.dart  log_inst.dart  log_printer.dart  log_view.dart  main.dart  passwords.dart  rfid_event.dart  serial.dart  settings.dart  settings_page.dart  state.dart  user_flow.dart  util.dart  widgets.dart
linux/: CMakeLists.txt
pi_os_installer/: main.py  pyproject.toml
web/: index.html
web-test-4/: flutter_bootstrap.js
(+42 files in other folders)
